--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +21,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.3.0"
   }
 }
